--- a/project2.ipynb
+++ b/project2.ipynb
@@ -4,8 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# project 2"
+    "# project 2\n",
+    "median income with autotheft\n",
+    "median income with bugrary\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
