adding correlation and regplots

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -4,9 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# project 2\n",
-    "median income with autotheft\n",
-    "median income with bugrary\n"
+    "# Project 2 Crime Housing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import crime housing data"
    ]
   },
   {
@@ -43,20 +48,27 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "crime_counts_with_salary = crime_counts.merge(\n",
     "    crime_housing_df[['Zip_Code_Crime', 'Medianhouseholdincome']].drop_duplicates('Zip_Code_Crime'),\n",
     "    on='Zip_Code_Crime'\n",
     ").dropna()\n",
     "\n",
+    "# make medianhouseholdincome a float\n",
     "crime_counts_with_salary['Medianhouseholdincome'] = crime_counts_with_salary['Medianhouseholdincome'].replace({'\\$': '', ',': ''}, regex=True).astype(float)\n",
     "\n",
-    "crime_list = ['Theft', 'Auto Theft', 'Burglary']\n",
+    "crime_list = ['Auto Theft', 'Burglary'] # list of crimes we want to use\n",
     "crime_counts_with_salary  = crime_counts_with_salary[\n",
     "    crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description.isin(crime_list)\n",
     "]\n",
     "crime_counts_with_salary\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot both auto theft and burglary"
    ]
   },
   {
@@ -67,16 +79,25 @@
    "source": [
     "colors = {'Theft':'blue','Auto Theft':'red','Burglary':'black'}\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(10,10))\n",
+    "fig, ax = plt.subplots(figsize=(5,5))\n",
     "\n",
     "\n",
     "\n",
     "for crime in crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description.unique():\n",
     "    data = crime_counts_with_salary[crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description == crime]\n",
-    "    ax.scatter(x=data.Crime_Count, y=data.Medianhouseholdincome, c=colors[crime], label=crime)\n",
-    "ax.set_xlabel('crime_count')    \n",
-    "ax.set_ylabel('median_income')    \n",
-    "ax.legend()"
+    "    ax.scatter(x=data.Medianhouseholdincome, y=data.Crime_Count, c=colors[crime], label=crime)\n",
+    "ax.set_xlabel('median_income')  \n",
+    "ax.set_ylabel('crime_counts')    \n",
+    "ax.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Auto theft plot and correlation coefficient"
    ]
   },
   {
@@ -85,32 +106,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Filter the DataFrame to include only the crime types in the colors dictionary\n",
-    "filtered_crimes = crime_counts_with_salary[\n",
-    "    crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description.isin(colors.keys())\n",
-    "]\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10,10))\n",
-    "\n",
-    "ax = plt.subplot(2,2,1)\n",
-    "\n",
-    "# Loop through only the crime types in the colors dictionary\n",
-    "for crime in filtered_crimes.Highest_NIBRS_UCR_Offense_Description.unique():\n",
-    "    data = filtered_crimes[filtered_crimes.Highest_NIBRS_UCR_Offense_Description == crime]\n",
-    "    \n",
-    "    # Scatter plot using the corresponding color from the dictionary\n",
-    "    ax.scatter(x=data.Crime_Count, y=data.Medianhouseholdincome, c=colors[crime], label=crime)\n",
-    "\n",
-    "# Set axis labels\n",
-    "ax.set_xlabel('Crime Count')\n",
-    "ax.set_ylabel('Median Household Income')\n",
-    "\n",
-    "# Show legend\n",
-    "ax.legend()\n",
-    "\n",
-    "plt.show()\n"
+    "auto_theft = crime_counts_with_salary[crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description == 'Auto Theft']\n",
+    "sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=auto_theft, ci=None)\n",
+    "display(stats.pearsonr(auto_theft.Crime_Count, auto_theft.Medianhouseholdincome))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Burglary plot and correlation coefficient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "burglary = crime_counts_with_salary[crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description == 'Burglary']\n",
+    "sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=burglary, ci=None)\n",
+    "display(stats.pearsonr(burglary.Crime_Count, burglary.Medianhouseholdincome))"
    ]
   }
  ],
