adding t-test and std:

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -108,7 +108,8 @@
    "source": [
     "auto_theft = crime_counts_with_salary[crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description == 'Auto Theft']\n",
     "sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=auto_theft, ci=None)\n",
-    "display(stats.pearsonr(auto_theft.Crime_Count, auto_theft.Medianhouseholdincome))"
+    "display(stats.pearsonr(auto_theft.Crime_Count, auto_theft.Medianhouseholdincome))\n",
+    "display(np.std(auto_theft.Crime_Count))"
    ]
   },
   {
@@ -126,7 +127,8 @@
    "source": [
     "burglary = crime_counts_with_salary[crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description == 'Burglary']\n",
     "sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=burglary, ci=None)\n",
-    "display(stats.pearsonr(burglary.Crime_Count, burglary.Medianhouseholdincome))"
+    "display(stats.pearsonr(burglary.Crime_Count, burglary.Medianhouseholdincome))\n",
+    "display(np.std(burglary.Crime_Count))"
    ]
   },
   {
@@ -148,6 +150,22 @@
     "\n",
     "display('N = {} (auto_theft) {} (burglary)'.format(sum(auto_theft.Crime_Count), sum(burglary.Crime_Count)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### T-test of auto theft and burglary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(stats.ttest_ind(auto_theft.Crime_Count, burglary.Crime_Count))"
+   ]
   }
  ],
  "metadata": {
@@ -166,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
