--- a/project2.ipynb
+++ b/project2.ipynb
@@ -107,7 +107,8 @@
    "outputs": [],
    "source": [
     "auto_theft = crime_counts_with_salary[crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description == 'Auto Theft']\n",
-    "sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=auto_theft, ci=None)\n",
+    "ax = sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=auto_theft, ci=None)\n",
+    "ax.set_title(\"Auto Theft vs Median Income\")\n",
     "display(stats.pearsonr(auto_theft.Crime_Count, auto_theft.Medianhouseholdincome))\n",
     "display(np.std(auto_theft.Crime_Count))"
    ]
@@ -126,7 +127,8 @@
    "outputs": [],
    "source": [
     "burglary = crime_counts_with_salary[crime_counts_with_salary.Highest_NIBRS_UCR_Offense_Description == 'Burglary']\n",
-    "sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=burglary, ci=None)\n",
+    "ax = sns.regplot(x='Medianhouseholdincome', y='Crime_Count', data=burglary, ci=None)\n",
+    "ax.set_title(\"Burglary vs Median Income\")\n",
     "display(stats.pearsonr(burglary.Crime_Count, burglary.Medianhouseholdincome))\n",
     "display(np.std(burglary.Crime_Count))"
    ]
@@ -148,7 +150,8 @@
     "plt.bar([1,2],[auto_theft.Crime_Count.mean(), burglary.Crime_Count.mean()], tick_label=['auto_theft', 'burglary'])\n",
     "plt.title('Average number of crime type per area')\n",
     "\n",
-    "display('N = {} (auto_theft) {} (burglary)'.format(sum(auto_theft.Crime_Count), sum(burglary.Crime_Count)))"
+    "display('N = {} (auto_theft) {} (burglary)'.format(sum(auto_theft.Crime_Count), sum(burglary.Crime_Count)))\n",
+    "display('avg = {} (auto_theft) {} (burglary)'.format(auto_theft.Crime_Count.mean(), burglary.Crime_Count.mean()))"
    ]
   },
   {
