--- a/project2.ipynb
+++ b/project2.ipynb
@@ -136,13 +136,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,7 +169,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-
     "\n",
     "#determines how many crimes have been commited in a zip code.\n",
     "crime_zip = crime_housing_df.groupby('Zip_Code_Crime').size().reset_index(name='Zip_crime_count')\n",
@@ -200,6 +192,43 @@
     "crime_zip_info['Medianhouseholdincome'] = crime_zip_info['Medianhouseholdincome'].replace({'\\$': '', ',': ''}, regex=True).astype(float)\n",
     "sns.regplot(x='Populationwithdisability', y='Medianhouseholdincome', data=crime_zip_info, ci=None)\n",
     "display(stats.pearsonr(crime_zip_info.Medianhouseholdincome, crime_zip_info.Populationwithdisability))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average number of auto thefts and burglaries per area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.bar([1,2],[auto_theft.Crime_Count.mean(), burglary.Crime_Count.mean()], tick_label=['auto_theft', 'burglary'])\n",
+    "plt.title('Average number of crime type per area')\n",
+    "\n",
+    "display('N = {} (auto_theft) {} (burglary)'.format(sum(auto_theft.Crime_Count), sum(burglary.Crime_Count)))\n",
+    "display('avg = {} (auto_theft) {} (burglary)'.format(auto_theft.Crime_Count.mean(), burglary.Crime_Count.mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### T-test of auto theft and burglary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(stats.ttest_ind(auto_theft.Crime_Count, burglary.Crime_Count))"
    ]
   },
   {
@@ -237,21 +266,6 @@
    "source": [
     "display(stats.ttest_ind(highest_disability.Zip_crime_count, lowest_disability.Zip_crime_count))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
