more conflict updates

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crime_counts = crime_housing_df.groupby(['Highest_NIBRS_UCR_Offense_Description', 'Zip_Code_Crime', 'Populationwithdisability']).size().reset_index(name='Crime_Count')\n",
+    "crime_counts = crime_housing_df.groupby(['Highest_NIBRS_UCR_Offense_Description', 'Zip_Code_Crime']).size().reset_index(name='Crime_Count')\n",
     "\n",
     "crime_counts"
    ]
@@ -160,6 +160,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### T-test of auto theft and burglary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(stats.ttest_ind(auto_theft.Crime_Count, burglary.Crime_Count))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Does crime occur more in communities with higher disability? do people take advatage of the disabled\n"
    ]
   },
@@ -192,43 +208,6 @@
     "crime_zip_info['Medianhouseholdincome'] = crime_zip_info['Medianhouseholdincome'].replace({'\\$': '', ',': ''}, regex=True).astype(float)\n",
     "sns.regplot(x='Populationwithdisability', y='Medianhouseholdincome', data=crime_zip_info, ci=None)\n",
     "display(stats.pearsonr(crime_zip_info.Medianhouseholdincome, crime_zip_info.Populationwithdisability))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Average number of auto thefts and burglaries per area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.bar([1,2],[auto_theft.Crime_Count.mean(), burglary.Crime_Count.mean()], tick_label=['auto_theft', 'burglary'])\n",
-    "plt.title('Average number of crime type per area')\n",
-    "\n",
-    "display('N = {} (auto_theft) {} (burglary)'.format(sum(auto_theft.Crime_Count), sum(burglary.Crime_Count)))\n",
-    "display('avg = {} (auto_theft) {} (burglary)'.format(auto_theft.Crime_Count.mean(), burglary.Crime_Count.mean()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### T-test of auto theft and burglary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(stats.ttest_ind(auto_theft.Crime_Count, burglary.Crime_Count))"
    ]
   },
   {
